# demo_voxel51

./: 01_download_dataset.py  02_visualize_dataset.py  03_fifty_one_tutorial_run_inference.py  04_compute_and_save_embeddings.py  05_visualize_embeddings.py  06_interactive_visualization.py  07_semantic_search.py  fifty_one_tutorial_run_inference_3.py  main.py  pyproject.toml
embeddings/: filepaths.npy  sample_ids.npy
